# fs2db

./: .gitignore  Cargo.toml  README.md  build.rs  proto-inst.sh
.github/workflows/: rust.yml
examples/conv/fs2pg/lines2pg/wix/: Cargo.toml  enwiki-20231101-pages-articles-multistream-index.txt  fs2db-proto  index-1024.txt  index-1048576.txt  index-131072.txt  index-16384.txt  index-16777216.txt  run.sh  test.sh  wix
examples/conv/fs2pg/lines2pg/wix/src/: lib.rs  main.rs  row.rs  source.rs
examples/conv/fs2pg/lines2pg/wix/src/source/: line2row.rs  lines.rs
examples/conv/fs2pg/lines2pg/wix/src/source/lines/: fs2lines.rs  fs2rows.rs  lines2rows.rs
examples/fs2pg/lines2pg/wix/: Cargo.toml  build-parts.sed  build-parts.sh  build-test-files.sh  enwiki-20231101-sha1sums.txt  test-nolog.md  test-nolog.sh  test-pgbench.sh  test-slow.md  test-slow.sh  test-tx.md  test-tx.sh  test.md
examples/fs2pg/lines2pg/wix/src/: main.rs
examples/merge/source/simple/log/rs-merge-sample-log/: Cargo.toml  rs-merge-sample-log
examples/merge/source/simple/log/rs-merge-sample-log/src/: main.rs
fs2db-proto/fs2db/proto/source/v1/: source.proto
src/: conv.rs  input.rs  lib.rs  output.rs
src/conv/: rpc.rs  s2t.rs
src/conv/rpc/: src2tgt.rs
src/input/: bin.rs  conv.rs  group.rs  lines.rs  merge.rs  rpc.rs  select.rs  source.rs
src/input/conv/: gzip.rs  lines.rs  source.rs
src/input/conv/gzip/: gz_tokio.rs
src/input/group/: paste.rs
src/input/join/mem/: btree.rs
src/input/lines/json/: async_tokio.rs  sync.rs
src/input/lines/plain/: async_tokio.rs  sync.rs
src/input/merge/: simple.rs  svc.rs
src/output/: async_tokio.rs  sync.rs  upsert.rs
