[package]
name = "fs2db"
version = "0.1.0"
edition = "2021"

[dependencies.futures]
version = "0.3"
optional = true
default-features = false
features = [
	"std",
	"async-await",
	"executor",
]

[dependencies.tonic]
version = "0.10"
optional = true
default-features = false
features = [
	"transport",
	"codegen",
	"prost",
]

[dependencies.serde]
version = "1.0"
default-features = false
features = [
	"std",
]

[dependencies.serde_json]
version = "1.0"
optional = true
default-features = false
features = [
	"std",
]

[dependencies.tokio]
version = "1.34"
optional = true
default-features = false
features = [
  "fs",
  "io-util",
]

[dependencies.tokio-stream]
version = "0.1"
optional = true
default-features = false
features = [
  "time",
  "io-util",
]

[features]
default = [
	"async_tokio",
	"json",
	"async",
]

async = [
	"futures",
	"tonic",
]

async_tokio = [
	"tokio",
	"tokio-stream",
]

json = [
	"serde_json",
]
