[package]
name = "fs2db"
version = "1.1.0"
edition = "2021"
description = "migration helper"
license = "MIT"

[dependencies.futures]
version = "0.3"
optional = true
default-features = false
features = [
	"std",
	"async-await",
	"executor",
]

[dependencies.serde]
version = "1.0"
default-features = false
features = [
	"std",
]

[dependencies.serde_json]
version = "1.0"
optional = true
default-features = false
features = [
	"std",
]

[dependencies.tokio]
version = "1.34"
optional = true
default-features = false
features = [
  "fs",
  "io-util",
]

[dependencies.tokio-stream]
version = "0.1"
optional = true
default-features = false
features = [
  "time",
  "io-util",
]

[dependencies.prost]
version = "0.12"
optional = true
default-features = false
features = [
	"prost-derive",
	"std",
]

[dependencies.tonic]
version = "0.10"
optional = true
default-features = false
features = [
	"transport",
	"codegen",
	"prost",
]

[build-dependencies.tonic-build]
version = "0.10"
optional = true
default-features = false
features = [
	"transport",
	"prost",
]

[features]
default = [
	"async_tokio",
	"json",
	"async",
	"grpc_tonic",
	"source",
	"target",
]

source = []
target = []

async = [
	"futures",
	"tonic",
]

grpc_tonic = [
	"tonic",
	"tonic-build",
	"prost",
]

async_tokio = [
	"tokio",
	"tokio-stream",
]

json = [
	"serde_json",
]
